plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.7'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'org.example'
version = '0.0.1-SNAPSHOT'
description = 'WebFluxLearning'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

ext {
//    set('springCloudVersion', "2024.0.2")
    set('springBootVersion', "3.5.7")
//    set('springAlibabaAIVersion', "1.1.2.2")
//    set('dashscopeAIVersion', "1.1.0.0")
//    set('tikaVersion', "3.2.3")
//    set('minioVersion', "9.0.0")
//    set('langChain4JVersion', "1.3.0")
//    set('langChain4JCommunityVersion', "1.12.2-beta22")
    set('springAiVersion', "1.1.4")
//    set('springCloudAlibabaVersion', "2023.0.1.2")
}

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        url 'https://maven.aliyun.com/repository/public/'
    }
    maven {
        url 'https://maven.aliyun.com/nexus/content/repositories/jcenter'
    }
}

dependencyManagement {
    imports {
//        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
//        mavenBom "com.alibaba.cloud.ai:spring-ai-alibaba-bom:${springAlibabaAIVersion}"
//        mavenBom "dev.langchain4j:langchain4j-bom:${langChain4JVersion}"
//        mavenBom "dev.langchain4j:langchain4j-community-bom:${langChain4JCommunityVersion}"
//        mavenBom "com.alibaba.cloud:spring-cloud-alibaba-dependencies:${springCloudAlibabaVersion}"
        // https://mvnrepository.com/artifact/org.springframework.ai/spring-ai-bom
        mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"

    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
//    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'

//    implementation 'org.redisson:redisson-spring-boot-starter:3.52.0'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'

    implementation 'org.springframework.ai:spring-ai-openai'
    implementation 'org.springframework.ai:spring-ai-rag'
    implementation 'org.springframework.ai:spring-ai-starter-model-openai'
    implementation 'org.springframework.ai:spring-ai-advisors-vector-store'
    implementation 'org.springframework.ai:spring-ai-pgvector-store'
    implementation 'org.springframework.ai:spring-ai-starter-mcp-client-webflux'
//    implementation "io.minio:minio:${minioVersion}"

//    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-starter-dashscope:${dashscopeAIVersion}"
//    implementation "com.alibaba.cloud.ai:spring-ai-alibaba-agent-framework:${springAlibabaAIVersion}"
    implementation 'org.springframework.ai:spring-ai-markdown-document-reader'
    implementation 'cn.hutool:hutool-all:5.8.26'
//    implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.0.2'
//    implementation 'com.github.xiaoymin:knife4j-openapi3-ui:4.0.0'

    implementation 'org.springframework.kafka:spring-kafka'
    implementation 'io.projectreactor.kafka:reactor-kafka'
    
    // https://mvnrepository.com/artifact/com.github.ben-manes.caffeine/caffeine
//    implementation 'com.github.ben-manes.caffeine:caffeine:3.2.3'
//    implementation 'org.springframework.ai:spring-ai-starter-vector-store-pgvector:1.1.2'
    // https://mvnrepository.com/artifact/org.apache.tika/tika-core
    implementation "org.postgresql:r2dbc-postgresql:1.1.1.RELEASE"
//    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'com.google.guava:guava:33.5.0-jre'
    implementation 'org.postgresql:postgresql:42.7.10'
    implementation 'com.alibaba:fastjson:2.0.58'

    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.springframework.kafka:spring-kafka-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}
